--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "libbpf"]
 	path = third_party/libbpf/libbpf
 	url = https://github.com/libbpf/libbpf.git
+    ignore = untracked
 [submodule "bpftool"]
 	path = third_party/bpftool/bpftool
 	url = https://github.com/libbpf/bpftool.git
+    ignore = untracked
